--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/iowanoldst-bt');
 @import "tailwindcss";
 @import "tw-animate-css";
@@ -6,6 +6,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-caveat: "Caveat", cursive;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -45,6 +46,13 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+.caveat-font {
+  font-family: var(--font-caveat);
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .playfair-display {
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
@@ -62,6 +70,7 @@
 
 
 :root {
+  --font-caveat: 'Caveat', cursive;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -136,5 +145,12 @@
   }
   body {
     @apply bg-gradient-to-b from-[#F5E9fC] to-[#ffffff] text-foreground;
+  }
+  
+  .caveat-font {
+    font-family: var(--font-caveat);
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
   }
 }
